Fix map responsiveness behind 400px

--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -512,7 +512,7 @@ img {
 
 @media screen and(max-width: 420px) {
   .map {
-    width: 3250px;
+    width: 325px;
   }
 
   .mySlides {
